Warn when java.base access disables test caching